AC_INIT([libbyteconvert], [0.1.0], [slocomptech@gmail.com])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADER([stdint.h],[],[AC_MSG_ERROR([sorry, can't do anything for you])])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_UINT8_T

# Checks for library functions.


# Config files
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
